--- a/.markbot.yml
+++ b/.markbot.yml
@@ -24,6 +24,7 @@ css:
     valid: true
     bestPractices: true
     has:
+      - ['html', 'box-sizing', 'border-box']
       - ['.btn', 'display', 'inline-block']
       - ['.btn:hover']
       - ['.btn-small', 'font-size']
